--- a/index.html
+++ b/index.html
@@ -11,9 +11,14 @@
 
   <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>CSS Snippet Cheatsheet</title>
     <link rel="stylesheet" href="./assets/css/style.css" />
+
+   
   </head>
 <body>
-
+<header>
+    <h1>CSS Snippet Cheatsheet</h1>
+</header>
 </body>
