Intro paragraph complete

--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!-- Set up HTML and CSS environments. -->
-<!-- Create the parent box for the whole page.  Make sure to have proper display property. -->
 <!-- Create header box and center the title in it. -->
 <!-- Create another box for the intro paragraph. -->
 <!-- Create parent box for the cards. -->
@@ -21,4 +20,10 @@
 <header>
     <h1>CSS Snippet Cheatsheet</h1>
 </header>
+<p>
+    Ever have trouble recalling the exact syntax for your 
+    favorite CSS code?  Give it a permanent home and add 
+    it to this page!  Select any snippet below and it'll 
+    automatically select all of the code for you to copy.
+</p>
 </body>
