--- a/index.html
+++ b/index.html
@@ -1,29 +1,40 @@
-<!-- Set up HTML and CSS environments. -->
-<!-- Create header box and center the title in it. -->
-<!-- Create another box for the intro paragraph. -->
-<!-- Create parent box for the cards. -->
-<!-- Create cards. -->
-<!-- Create box for footer. -->
 
 <!DOCTYPE html>
 <html lang="en-US">
 
-  <head>
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>CSS Snippet Cheatsheet</title>
     <link rel="stylesheet" href="./assets/css/style.css" />
-
-   
-  </head>
+</head>
 <body>
-<header>
-    <h1>CSS Snippet Cheatsheet</h1>
-</header>
-<p>
-    Ever have trouble recalling the exact syntax for your 
-    favorite CSS code?  Give it a permanent home and add 
-    it to this page!  Select any snippet below and it'll 
-    automatically select all of the code for you to copy.
-</p>
+    <!-- Build header -->
+    <header>
+        <h1>CSS Snippet Cheatsheet</h1>
+        <p>
+            Ever have trouble recalling the exact syntax for your
+            favorite CSS code? Give it a permanent home and add
+            it to this page! Select any snippet below and it'll
+            automatically select all of the code for you to copy.
+        </p>
+    </header>
+    <!-- Build main section using column/row grid -->
+    <main>
+        <section class="row">
+            <div class="card-column">
+                <figure class="code-card">
+                    <h2 class="card-header">Flexbox Row</h2>
+                    <div class="card-body">
+                        <p>Use these three properties to create a Flexbox row layout.</p>
+                    </div>
+                    <pre class="code-block"><code>.row {
+display: flex;
+flex-direction: row;
+flex-wrap: wrap;
+}</code></pre>
+</figure>
+            </div>
+</section>
 </body>
+</main>
