--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <!-- Build header -->
     <header>
-        <h1>CSS Snippet Cheatsheet</h1>
+        <h1 class="page-title">CSS Snippet Cheatsheet</h1>
         <p>
             Ever have trouble recalling the exact syntax for your
             favorite CSS code? Give it a permanent home and add
@@ -21,9 +21,9 @@
     </header>
     <!-- Build main section using column/row grid -->
     <main>
-        <section class="row">
+        <section class="row justify-center">
             <div class="card-column">
-                <figure class="code-card">
+                <figure class="card code-card">
                     <h2 class="card-header">Flexbox Row</h2>
                     <div class="card-body">
                         <p>Use these three properties to create a Flexbox row layout.</p>
