--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@ flex-wrap: wrap;
 }</code></pre>
 </figure>
             </div>
-</section>
-</body>
+        </section>
 </main>
+<footer>
+    <h3>Made with <span role="img" aria-label="heart">❤️</span> and CSS</h3>
+  </footer>
+</body>
+
+</html>
