--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en-US">
 
@@ -8,6 +7,7 @@
     <title>CSS Snippet Cheatsheet</title>
     <link rel="stylesheet" href="./assets/css/style.css" />
 </head>
+
 <body>
     <!-- Build header -->
     <header>
@@ -23,7 +23,7 @@
     <main>
         <section class="row justify-center">
             <div class="card-column">
-                <figure class="card code-card">
+                <figure class="code-card">
                     <h2 class="card-header">Flexbox Row</h2>
                     <div class="card-body">
                         <p>Use these three properties to create a Flexbox row layout.</p>
@@ -33,13 +33,64 @@ display: flex;
 flex-direction: row;
 flex-wrap: wrap;
 }</code></pre>
-</figure>
+                </figure>
+            </div>
+            <div class="card-column">
+                <figure class="code-card">
+                    <h2 class="card-header">Flexbox Column</h2>
+                    <div class="card-body">
+                        <p>Use this to create a Flexbox column layout.</p>
+                    </div>
+                    <pre class="code-block"><code>.column {
+display: flex;
+flex-direction: column;
+}</code></pre>
+                </figure>
+            </div>
+            <div class="card-column">
+                <figure class="code-card">
+                    <h2 class="card-header">CSS Grid Layout</h2>
+                    <div class="card-body">
+                        <p>Build a 12-column layout using CSS Grid</p>
+                    </div>
+                    <pre class="code-block"><code>.grid {
+display: grid;
+width: 100%;
+grid-template-columns: repeat(12, 1fr);
+}</code></pre>
+                </figure>
+            </div>
+            <div class="card-column">
+                <figure class="code-card">
+                    <h2 class="card-header">Linear Gradients</h2>
+                    <div class="card-body">
+                        <p>This will create a background linear gradient from top to bottom.</p>
+                    </div>
+                    <pre class="code-block"><code>.grid {
+display: grid;
+width: 100%;
+grid-template-columns: repeat(12, 1fr);
+}</code></pre>
+                </figure>
+            </div>
+            <div class="card-column">
+                <figure class="code-card">
+                    <h2 class="card-header">Box Transition Glow</h2>
+                    <div class="card-body">
+                        <p>Use transition and box shadows to glow on hover.</p>
+                    </div>
+                    <pre class="code-block"><code>.grid {
+display: grid;
+width: 100%;
+grid-template-columns: repeat(12, 1fr);
+}</code></pre>
+                </figure>
             </div>
         </section>
-</main>
-<footer>
-    <h3>Made with <span role="img" aria-label="heart">❤️</span> and CSS</h3>
-  </footer>
+    </main>
+    <footer>
+        <h3>Made with <span role="img" aria-label="heart">❤️</span> and CSS</h3>
+    </footer>
 </body>
 
 </html>
